[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/SpaceStation.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/BaseLevel.gd" type="Script" id=2]
[ext_resource path="res://scenes/RotatingPlatform.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LoseOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/CollidixOverlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ConfigOverlay.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ConfirmOverlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ForecastOverlay.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/WinOverlay.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Meteor.tscn" type="PackedScene" id=11]

[node name="BaseLevel" type="Node2D"]
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="SpaceStation" parent="." instance=ExtResource( 1 )]
position = Vector2( 1021.85, 296.665 )

[node name="RotatingPlatforms" type="Node" parent="."]

[node name="RotatingPlatform" parent="RotatingPlatforms" instance=ExtResource( 3 )]
rotational_velocity = 6.28

[node name="RotatingPlatform2" parent="RotatingPlatforms" instance=ExtResource( 3 )]

[node name="Meteors" type="Node" parent="."]

[node name="Meteor" parent="Meteors" instance=ExtResource( 11 )]

[node name="Meteor2" parent="Meteors" instance=ExtResource( 11 )]

[node name="Meteor3" parent="Meteors" instance=ExtResource( 11 )]

[node name="Overlays" type="CanvasLayer" parent="."]

[node name="ConfigOverlay" parent="Overlays" instance=ExtResource( 7 )]
visible = false

[node name="ForecastOverlay" parent="Overlays" instance=ExtResource( 9 )]
visible = false

[node name="CollidixOverlay" parent="Overlays" instance=ExtResource( 6 )]
visible = false

[node name="ConfirmOverlay" parent="Overlays" instance=ExtResource( 8 )]
visible = false

[node name="WinOverlay" parent="Overlays" instance=ExtResource( 10 )]
visible = false

[node name="LoseOverlay" parent="Overlays" instance=ExtResource( 4 )]
visible = false
